// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabView should render correctly for tab Tincidunt 1`] = `
<div>
  <div
    className="Tab1Header"
  >
    <li
      onClick={[Function]}
    >
      Tincidunt
    </li>
  </div>
  <div
    className="BoxLine"
  />
  <div>
    <div>
      <div
        className="Tab1UnderLine"
      />
      <h1
        className="HeaderTitle"
      >
        Donec vitae
      </h1>
      <p
        className="TextContent1"
      >
        Ut tincidunt tincidunt erat. Fusce convallis metus id felis luctus adipiscing. Vivamus quis mi. Nullam vel sem. Morbi ac felis.
      </p>
      <p
        className="TextContent2"
      >
        Maecenas vestibulum mollis diam.. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Suspendisse potenti. In dui magna, posuere eget, vestibulum et, tempor auctor, justo.
      </p>
    </div>
  </div>
</div>
`;

exports[`TabView should render correctly for tab Tincidunt 2`] = `
<div>
  <div
    className="Tab2Header"
  >
    <li
      onClick={[Function]}
    >
      Sodales
    </li>
  </div>
  <div
    className="BoxLine"
  />
  <div>
    <div>
      <div
        className="Tab2UnderLine"
      />
      <h1
        className="HeaderTitle2"
      >
        Donec sodales sagittis
      </h1>
      <p
        className="TextContent1"
      >
        Maecenas vestibulum mollis diam.. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Suspendisse potenti. In dui magna, posuere eget, vestibulum et, tempor auctor, justo.
      </p>
      <button
        className="ButtonStyle"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;
